making code omcptilble with java 17